--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MPFE
 Type: Package
-Title: Estimation of amplicon methylation pattern distribution from
+Title: Estimation of the amplicon methylation pattern distribution from
         bisulphite sequencing data
 Version: 1.23.0
 Date: 2014-11-28
