Methylation Patterns Frequency Estimation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,4 @@ git_last_commit: c3fa9dd
 git_last_commit_date: 2019-10-29
 Date/Publication: 2019-10-29
 NeedsCompilation: no
-Packaged: 2019-10-30 00:47:35 UTC; biocbuild
+Packaged: 2020-07-09 00:56:57 UTC; burden
